<resources>
	<string name="app_name">Hi Doc</string>
	<string name="app_description">One stop health care app</string>
	<string name="app_channel">HiDocMember</string>

	<string name="title_home">Home</string>
	<string name="title_chat">Chat</string>
	<string name="title_profile">Profile</string>
	<string name="title_schedule">Schedule</string>
	<string name="title_sign_in">Welcome, sign to your account</string>
	<string name="title_sign_up">Join</string>
	<string name="title_forgot_password">Reset Password</string>

	<string name="text_love">Love</string>
	<string name="text_search">Search</string>
	<string name="text_search_chat">Search Chat, Doctors, Friends</string>
	<string name="text_morning">Good Morning</string>
	<string name="text_hospital">Hospital</string>
	<string name="text_specialists">Specialists</string>
	<string name="text_more">More</string>
	<string name="text_doctor_specialists">Doctor Specialists</string>
	<string name="text_see_all">See All</string>
	<string name="text_plus">+</string>
	<string name="text_chat">Chat</string>
	<string name="text_articles">Articles</string>
	<string name="text_user_information">User Information</string>
	<string name="text_edit">Edit</string>
	<string name="text_sign_out">Sign Out</string>
	<string name="text_unique_id">Unique Id</string>
	<string name="text_email_address">Email Address</string>
	<string name="text_blood_type">Blood Type</string>
	<string name="text_age_range">Age Range</string>
	<string name="text_sex">Sex</string>
	<string name="text_history">History</string>
	<string name="text_check_up">Check Up</string>
	<string name="text_medicine">Medicine</string>
	<string name="text_recent_conversations">Recent Conversations</string>
	<string name="text_password">Password</string>
	<string name="text_log_in">Log In</string>
	<string name="text_sign_up">Sign Up</string>
	<string name="text_sign_in">Sign In</string>
	<string name="text_forgot_password">Forgot Password?</string>
	<string name="text_welcome_sign_in">Welcome</string>
	<string name="text_description_sign_in">Get a new experience</string>
	<string name="text_register_now">Register Now</string>
	<string name="text_dont_have_an_account">Don\'t have an account?</string>
	<string name="text_or">Or</string>
	<string name="text_create_an_account">Create An Account</string>
	<string name="text_create_an_account_description">And discover your medical needed</string>
	<string name="text_full_name">Full Name</string>
    <string name="text_phone">Phone Number</string>
    <string name="text_date_of_birth">Date of Birth</string>
    <string name="text_join">Join</string>
    <string name="text_terms_and_conditions">Terms and Conditions</string>

	<string name="validation_email_reset">Please put your email address, we will send you a link to reset the password</string>
	<string name="validation_required_all_input">All input is required</string>
	<string name="validation_min_length">%s length is less than %s</string>

	<string name="info_welcome">Welcome %s</string>
	<string name="info_email_verification">Email verification is sent to %s</string>
	<string name="info_email_reset">Email reset password is sent to %s</string>

	<string name="text_dash">-</string>
    <string name="text_profile_picture">Profile Picture</string>
    <string name="text_good_afternoon">Good Afternoon</string>
	<string name="text_good_evening">Good Evening</string>
	<string name="text_good_night">Good Night</string>
	<string name="text_good_morning">Good Morning</string>
    <string name="text_dr">Dr. %s</string>
    <string name="text_reset">Reset</string>
	<string name="title_edit_profile">Edit Profile</string>
    <string name="text_male_or_female">Male or Female</string>
	<string name="text_update">Update</string>
    <string name="text_male">Male</string>
	<string name="text_female">Female</string>
    <string name="info_profile_updated">Profile is updated</string>
    <string name="info_duplicate_data">Anda sudah terhubung</string>
    <string name="text_conversation">Chat</string>
    <string name="text_change_photo">Change</string>
    <string name="title_articles">Articles</string>
    <string name="text_favorite">Favorite</string>
    <string name="text_doctor">Doctor</string>
    <string name="title_doctors">Doctors</string>
    <string name="text_arahkan">Arahkan ke barcode</string>

</resources>
