<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/layoutParent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackgroundPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/componentToolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        layout="@layout/component_toolbar" />

    <ScrollView
        app:layout_constraintTop_toBottomOf="@id/componentToolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            style="@style/AppTheme.Layout.Parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutForm"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/AppTheme.Layout.Parent"
                    android:background="@drawable/shape_round"
                    android:paddingBottom="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_marginTop="@dimen/component_medium"
                        android:layout_gravity="center"
                        android:contentDescription="@string/text_profile_picture"
                        android:id="@+id/imageProfile"
                        android:src="@drawable/ic_user"
                        android:scaleType="centerInside"
                        android:background="@drawable/shape_circle_placeholder"
                        android:layout_width="@dimen/profile_picture_big"
                        android:layout_height="@dimen/profile_picture_big" />

                    <com.ismealdi.hidoc.utils.components.AmButton
                        android:id="@+id/buttonChangePhoto"
                        style="@style/AppTheme.Button"
                        android:textSize="@dimen/text_small"
                        android:textAllCaps="true"
                        android:layout_marginBottom="@dimen/component_big"
                        android:paddingStart="@dimen/component_extra_big"
                        android:paddingEnd="@dimen/component_extra_big"
                        android:background="@color/colorTransparent"
                        android:textColor="@color/colorButtonPrimary"
                        android:layout_gravity="center"
                        android:layout_width="150dp"
                        android:layout_height="@dimen/input_height"
                        android:text="@string/text_change_photo"/>

                    <com.ismealdi.hidoc.utils.components.AmTextView
                        android:textColor="@color/colorTextPrimary"
                        android:layout_marginTop="@dimen/component_medium"
                        android:layout_marginBottom="@dimen/component_small"
                        android:textSize="@dimen/text_small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_email_address"/>

                    <com.ismealdi.hidoc.utils.components.AmEditText
                        android:id="@+id/inputEmailAddress"
                        style="@style/AppTheme.EditText.Secondary"
                        android:hint="@string/text_email_address"
                        android:lines="1"
                        android:inputType="textEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <com.ismealdi.hidoc.utils.components.AmTextView
                        android:textColor="@color/colorTextPrimary"
                        android:layout_marginTop="@dimen/component_medium"
                        android:layout_marginBottom="@dimen/component_small"
                        android:textSize="@dimen/text_small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_password"/>

                    <com.ismealdi.hidoc.utils.components.AmEditText
                        android:id="@+id/inputPassword"
                        style="@style/AppTheme.EditText.Secondary"
                        android:hint="@string/text_password"
                        android:lines="1"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <com.ismealdi.hidoc.utils.components.AmTextView
                        android:textColor="@color/colorTextPrimary"
                        android:layout_marginTop="@dimen/component_medium"
                        android:layout_marginBottom="@dimen/component_small"
                        android:textSize="@dimen/text_small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_full_name"/>

                    <com.ismealdi.hidoc.utils.components.AmEditText
                        android:id="@+id/inputFullName"
                        style="@style/AppTheme.EditText.Secondary"
                        android:hint="@string/text_full_name"
                        android:lines="1"
                        android:inputType="textPersonName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <com.ismealdi.hidoc.utils.components.AmTextView
                        android:textColor="@color/colorTextPrimary"
                        android:layout_marginTop="@dimen/component_medium"
                        android:layout_marginBottom="@dimen/component_small"
                        android:textSize="@dimen/text_small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_phone"/>

                    <com.ismealdi.hidoc.utils.components.AmEditText
                        android:id="@+id/inputPhoneNumber"
                        style="@style/AppTheme.EditText.Secondary"
                        android:hint="@string/text_phone"
                        android:lines="1"
                        android:inputType="phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <com.ismealdi.hidoc.utils.components.AmTextView
                        android:textColor="@color/colorTextPrimary"
                        android:layout_marginTop="@dimen/component_medium"
                        android:layout_marginBottom="@dimen/component_small"
                        android:textSize="@dimen/text_small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_blood_type"/>

                    <com.ismealdi.hidoc.utils.components.AmEditText
                        android:id="@+id/inputBlood"
                        style="@style/AppTheme.EditText.Secondary"
                        android:hint="@string/text_blood_type"
                        android:lines="1"
                        android:maxLength="2"
                        android:inputType="textCapCharacters"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <com.ismealdi.hidoc.utils.components.AmTextView
                        android:textColor="@color/colorTextPrimary"
                        android:layout_marginTop="@dimen/component_medium"
                        android:layout_marginBottom="@dimen/component_small"
                        android:textSize="@dimen/text_small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_date_of_birth"/>

                    <com.ismealdi.hidoc.utils.components.AmEditText
                        android:id="@+id/inputDateOfBirth"
                        style="@style/AppTheme.EditText.Secondary"
                        android:hint="@string/text_date_of_birth"
                        android:lines="1"
                        android:focusable="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <com.ismealdi.hidoc.utils.components.AmTextView
                        android:textColor="@color/colorTextPrimary"
                        android:layout_marginTop="@dimen/component_medium"
                        android:layout_marginBottom="@dimen/component_small"
                        android:textSize="@dimen/text_small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_sex"/>

                    <RadioGroup
                        android:id="@+id/radioGroupSex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <com.ismealdi.hidoc.utils.components.AmRadioButton
                            android:id="@+id/radioMale"
                            android:textColor="@color/colorTextSecondary"
                            android:textSize="@dimen/text_small"
                            android:text="@string/text_male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="@dimen/component_medium"
                            android:layout_marginStart="-6dp"
                            android:layout_marginEnd="@dimen/component_medium"
                            tools:ignore="RtlSymmetry" />
                        <com.ismealdi.hidoc.utils.components.AmRadioButton
                            android:id="@+id/radioFemale"
                            android:textColor="@color/colorTextSecondary"
                            android:textSize="@dimen/text_small"
                            android:text="@string/text_female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="@dimen/component_medium"
                            tools:ignore="RtlSymmetry" />
                    </RadioGroup>

                </LinearLayout>

                <com.ismealdi.hidoc.utils.components.AmButton
                    android:layout_marginTop="-20dp"
                    android:id="@+id/buttonUpdate"
                    style="@style/AppTheme.Button"
                    android:textSize="@dimen/text_small"
                    android:textAllCaps="true"
                    android:paddingStart="@dimen/component_extra_big"
                    android:paddingEnd="@dimen/component_extra_big"
                    android:background="@drawable/button_primary"
                    android:layout_gravity="center"
                    android:layout_width="150dp"
                    android:layout_height="@dimen/input_height"
                    android:text="@string/text_update"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>



</android.support.constraint.ConstraintLayout>