<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        android:id="@+id/layoutParent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/colorBackgroundPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            android:layout_marginTop="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/AppTheme.Layout.Parent"
            android:layout_width="match_parent"
            android:layout_height="0dp">

        <LinearLayout
                android:id="@+id/layoutForm"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/AppTheme.Layout.Parent"
                    android:background="@drawable/shape_round"
                    android:paddingBottom="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <ImageView
                        android:layout_marginTop="@dimen/component_big"
                        android:id="@+id/imageLogo"
                        android:layout_gravity="center"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:tint="@color/colorPrimaryDark"
                        app:srcCompat="@drawable/ic_logo"/>
    
                <com.ismealdi.hidoc.utils.components.AmEditText
                        android:layout_marginTop="@dimen/component_special"
                        android:drawableStart="@drawable/ic_mail"
                        android:drawablePadding="@dimen/component_medium"
                        android:id="@+id/inputEmailAddress"
                        style="@style/AppTheme.EditText.Secondary"
                        android:hint="@string/text_email_address"
                        android:lines="1"
                        android:inputType="textEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
    
                <com.ismealdi.hidoc.utils.components.AmEditText
                        android:layout_marginTop="@dimen/component_medium"
                        android:drawableStart="@drawable/ic_password"
                        android:drawablePadding="@dimen/component_medium"
                        android:id="@+id/inputPassword"
                        android:lines="1"
                        android:inputType="textPassword"
                        style="@style/AppTheme.EditText.Secondary"
                        android:hint="@string/text_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                <com.ismealdi.hidoc.utils.components.AmTextView
                        android:layout_marginTop="@dimen/component_extra_big"
                        android:id="@+id/buttonForgotPassword"
                        android:layout_gravity="center"
                        android:textSize="@dimen/text_small"
                        app:am_font_style="medium"
                        android:textColor="@drawable/button_text_primary"
                        android:text="@string/text_forgot_password"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/input_height"/>
                
            </LinearLayout>

            <com.ismealdi.hidoc.utils.components.AmButton
                    android:layout_marginTop="-20dp"
                    android:id="@+id/buttonLogIn"
                    style="@style/AppTheme.Button"
                    android:textSize="@dimen/text_small"
                    android:textAllCaps="true"
                    android:paddingStart="@dimen/component_extra_big"
                    android:paddingEnd="@dimen/component_extra_big"
                    android:background="@drawable/button_primary"
                    android:layout_gravity="center"
                    android:layout_width="150dp"
                    android:layout_height="@dimen/input_height"
                    android:text="@string/text_sign_in"/>

        </LinearLayout>

        <android.support.constraint.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">

            <com.ismealdi.hidoc.utils.components.AmTextView
                    android:id="@+id/labelAccount"
                    app:layout_constraintTop_toTopOf="@id/buttonRegister"
                    app:layout_constraintBottom_toBottomOf="@id/buttonRegister"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:textSize="@dimen/text_small"
                    android:textColor="@color/colorTextPrimary"
                    android:text="@string/text_dont_have_an_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <com.ismealdi.hidoc.utils.components.AmTextView
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/labelAccount"
                    android:layout_marginStart="@dimen/component_small"
                    android:id="@+id/buttonRegister"
                    android:textSize="@dimen/text_small"
                    app:am_font_style="medium"
                    android:textColor="@drawable/button_text_primary"
                    android:text="@string/text_register_now"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/input_height"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>

    

</android.support.constraint.ConstraintLayout>